--- a/packages/docs/pages/features/0-main.mdx
+++ b/packages/docs/pages/features/0-main.mdx
@@ -1,9 +1,12 @@
 ---
 slug: "/features/main"
 title: "Core Feature"
+subtitle: "Core Features related to Headless-Tree"
 category: feature
 template: feature
 storybook: feature/main
+sourceImplementation: packages/core/src/features/drag-and-drop/feature.ts
+sourceTypes: packages/core/src/features/drag-and-drop/types.ts
 api:
     config: MainFeatureConfig.md
     state: MainFeatureState.md
