--- a/packages/docs/pages/features/1-dnd.mdx
+++ b/packages/docs/pages/features/1-dnd.mdx
@@ -1,6 +1,7 @@
 ---
 slug: "/features/dnd"
 title: "Drag and Drop"
+subtitle: "Drag-and-drop Capabilities for tree items and external drag objects"
 category: feature
 template: feature
 storybook: feature/main
