--- a/packages/docs/pages/features/0-main.mdx
+++ b/packages/docs/pages/features/0-main.mdx
@@ -15,7 +15,14 @@ api:
     hotkeys: MainFeatureHotkeys.md
 ---
 
+import { DemoBox } from "../../src/components/feature-page/demo-box";
+
 # sasdasdasd
 
 Hello blubblubblub
+
+<DemoBox
+    storybookTag="feature/main"
+    height="200px"
+/>
 
