demo box layout

--- a/packages/docs/pages/features/0-main.mdx
+++ b/packages/docs/pages/features/0-main.mdx
@@ -21,8 +21,5 @@ import { DemoBox } from "../../src/components/feature-page/demo-box";
 
 Hello blubblubblub
 
-<DemoBox
-    storybookTag="feature/main"
-    height="200px"
-/>
+<DemoBox storybookTag="feature/main" />
 
