deploy api docs

--- a/packages/docs/pages/features/0-main.mdx
+++ b/packages/docs/pages/features/0-main.mdx
@@ -6,15 +6,15 @@ category: feature
 metalinks:
   - name: Source
     label: View Source
-    href: /
+    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/main/types.ts
   - name: Types
     label: View Types Source
-    href: /
+    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/main/types.ts
   - name: TypeDoc
     label: View TypeDoc
-    href: /
+    href: /api/types/_headless_tree_core.MainFeatureDef.html
   - name: Import
-    code: "import {abc} from \"asdasd\""
+    code: "import {abc} from \"@headless-tree/core\";"
     language: typescript
 storybook: feature/main
 api:
