--- a/packages/docs/pages/features/99-main.mdx
+++ b/packages/docs/pages/features/99-main.mdx
@@ -1,6 +1,6 @@
 ---
 slug: "/features/main"
-title: "Core Feature"
+title: "Main Feature"
 subtitle: "Core Features related to Headless-Tree"
 category: feature
 metalinks:
