story tags and story code markers

--- a/packages/docs/pages/data-adapters/0-nested-data-adapter.mdx
+++ b/packages/docs/pages/data-adapters/0-nested-data-adapter.mdx
@@ -21,6 +21,6 @@ storybook: feature/main
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox storybookTag="feature/main" />
+<DemoBox stories={["feature/nested-data-adapter"]} />
 
 TODO
