--- a/packages/docs/pages/features/1-tree.mdx
+++ b/packages/docs/pages/features/1-tree.mdx
@@ -13,7 +13,7 @@ metalinks:
   - name: TypeDoc
     label: View TypeDoc
     href: /api/types/_headless_tree_core.TreeFeatureDef.html
-storybook: feature/dnd
+storybook: feature/tree
 api:
   typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/types.ts
   typedoc: /api/types/_headless_tree_core.TreeFeatureDef.html
@@ -26,5 +26,6 @@ api:
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
+<DemoBox stories={["feature/tree"]} />
 
 TODO
