--- a/packages/docs/pages/features/99-main.mdx
+++ b/packages/docs/pages/features/99-main.mdx
@@ -26,6 +26,6 @@ api:
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox storybookTag="feature/main" />
+<DemoBox stories={["feature/main"]} />
 
 TODO
