--- a/packages/docs/pages/features/2-sync-dataloader.mdx
+++ b/packages/docs/pages/features/2-sync-dataloader.mdx
@@ -16,7 +16,7 @@ metalinks:
   - name: Import
     code: "import { syncDataLoaderFeature } from \"@headless-tree/core\";"
     language: typescript
-storybook: feature/dnd
+storybook: feature/sync-data-loader
 api:
   typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/sync-data-loader/types.ts
   typedoc: /api/types/_headless_tree_core.SyncDataLoaderFeatureDef.html
@@ -29,6 +29,6 @@ api:
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox storybookTag="feature/main" />
+<DemoBox stories={["feature/sync-data-loader"]} />
 
 TODO
