--- a/packages/docs/pages/features/5-dnd.mdx
+++ b/packages/docs/pages/features/5-dnd.mdx
@@ -29,6 +29,6 @@ api:
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox storybookTag="feature/main" />
+<DemoBox stories={["feature/dnd"]} />
 
 TODO
