--- a/packages/docs/pages/features/7-search.mdx
+++ b/packages/docs/pages/features/7-search.mdx
@@ -16,7 +16,7 @@ metalinks:
   - name: Import
     code: "import { searchFeature } from \"@headless-tree/core\";"
     language: typescript
-storybook: feature/dnd
+storybook: feature/search
 api:
   typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/search/types.ts
   typedoc: /api/types/_headless_tree_core.SearchFeatureDef.html
@@ -29,6 +29,6 @@ api:
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox storybookTag="feature/main" />
+<DemoBox stories={["feature/search"]} />
 
 TODO
