--- a/packages/docs/pages/features/8-renaming.mdx
+++ b/packages/docs/pages/features/8-renaming.mdx
@@ -16,7 +16,7 @@ metalinks:
   - name: Import
     code: "import { renamingFeature } from \"@headless-tree/core\";"
     language: typescript
-storybook: feature/dnd
+storybook: feature/renaming
 api:
   typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/renaming/types.ts
   typedoc: /api/types/_headless_tree_core.RenamingFeatureDef.html
@@ -29,6 +29,6 @@ api:
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox storybookTag="feature/main" />
+<DemoBox stories={["feature/renaming"]} />
 
 TODO
