--- a/packages/docs/pages/features/9-expandall.mdx
+++ b/packages/docs/pages/features/9-expandall.mdx
@@ -16,7 +16,7 @@ metalinks:
   - name: Import
     code: "import { expandAllFeature } from \"@headless-tree/core\";"
     language: typescript
-storybook: feature/dnd
+storybook: feature/expand-all
 api:
   typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/expand-all/types.ts
   typedoc: /api/types/_headless_tree_core.ExpandAllFeatureDef.html
@@ -29,6 +29,6 @@ api:
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox storybookTag="feature/main" />
+<DemoBox stories={["feature/expand-all"]} />
 
 TODO
