--- a/packages/docs/pages/guides/0-state.mdx
+++ b/packages/docs/pages/guides/0-state.mdx
@@ -7,4 +7,11 @@ category: guide
 
 import { DemoBox } from "../../src/components/page/demo-box";
 
-<DemoBox stories={["feature/state"]} />
+# Letting headless-tree manage the state
+<DemoBox stories={["guides/state"]} initialStory="React/State/Internal State" />
+
+# Managing individual feature states
+<DemoBox stories={["guides/state"]} initialStory="React/State/Distinct State Handlers" />
+
+# Manage the entire state yourself
+<DemoBox stories={["guides/state"]} initialStory="React/State/External State" />
