add stories to guides

--- a/packages/docs/pages/recipes/2-plugins.mdx
+++ b/packages/docs/pages/recipes/2-plugins.mdx
@@ -1,8 +1,8 @@
 ---
-slug: "/guides/plugins"
+slug: "/recipe/plugins"
 title: "Plugins"
 subtitle: "Write custom Headless-Tree Plugins or override parts of existing ones"
-category: advguide
+category: recipe
 ---
 
-TODO
+<DemoBox stories={["guide/plugin"]} />
