add missing imports

--- a/packages/docs/pages/recipes/0-handling-expensive-components.mdx
+++ b/packages/docs/pages/recipes/0-handling-expensive-components.mdx
@@ -5,6 +5,8 @@ subtitle: "How to use proper memoization to use expensive tree-item components"
 category: recipe
 ---
 
+import { DemoBox } from "../../src/components/page/demo-box";
+
 <DemoBox stories={["React/Guides/Render Performance/Slow Item Renderers"]} />
 
 <DemoBox stories={["React/Guides/Render Performance/Memoized Slow Item Renderers"]} />
