--- a/packages/docs/pages/recipes/1-virtualization.mdx
+++ b/packages/docs/pages/recipes/1-virtualization.mdx
@@ -5,4 +5,6 @@ subtitle: "Integrate virtualization into your tree to support many items"
 category: recipe
 ---
 
+import { DemoBox } from "../../src/components/page/demo-box";
+
 <DemoBox stories={["React/Scalability/Basic Virtualization"]} />
