--- a/packages/docs/pages/recipes/2-plugins.mdx
+++ b/packages/docs/pages/recipes/2-plugins.mdx
@@ -5,4 +5,6 @@ subtitle: "Write custom Headless-Tree Plugins or override parts of existing ones
 category: recipe
 ---
 
+import { DemoBox } from "../../src/components/page/demo-box";
+
 <DemoBox stories={["guide/plugin"]} />
