--- a/packages/docs/pages/guides/2-hotkeys.mdx
+++ b/packages/docs/pages/guides/2-hotkeys.mdx
@@ -4,7 +4,7 @@ title: "Hotkeys"
 category: guide
 ---
 
-# Hotkeys
+# Available Hotkeys
 
 ## General Hotkeys
 
@@ -18,6 +18,3 @@ category: guide
 | `focusLastItem` | `End` | Focuses the last item in the list. |
 
 
-| foo | bar |
-| :-- | :-: |
-| baz | qux |
