--- a/packages/docs/pages/guides/2-hotkeys.mdx
+++ b/packages/docs/pages/guides/2-hotkeys.mdx
@@ -4,9 +4,23 @@ title: "Hotkeys"
 category: guide
 ---
 
+# Enabling Hotkeys
+
+TODO
+
+# Overwriting Hotkeys
+
+TODO
+
+# Adding custom Hotkeys
+
+TODO
+
 # Available Hotkeys
 
 ## General Hotkeys
+
+The following hotkeys need the `hotkeysCoreFeature` feature added.
 
 | Key | Default Keybinding | Description |
 | --- | --- | --- |
@@ -17,4 +31,49 @@ category: guide
 | `focusFirstItem` | `Home` | Focuses the first item in the list. |
 | `focusLastItem` | `End` | Focuses the last item in the list. |
 
+## Selections
 
+The following hotkeys need the `hotkeysCoreFeature` and `selectionFeature` features added.
+
+| Key | Default Keybinding | Description |
+| --- | --- | --- |
+| `toggleSelectedItem` | `Ctrl+Space` | Toggles the selection of the focused item. |
+| `selectUpwards` | `Shift+ArrowUp` | Expands the current selection by the item prior to the focused item, and moves focus upwards. Discards non-connected selection blocks. |
+| `selectDownwards` | `Shift+ArrowDown` | Expands the current selection by the item after the focused item, and moves focus downwards. Discards non-connected selection blocks. |
+| `selectUpwardsCtrl` | `Ctrl+Shift+ArrowUp` | Same as `selectUpwards`, but doesn't discard other selection blocks. |
+| `selectDownwardsCtrl` | `Ctrl+Shift+ArrowDown` | Same as `selectDownwards`, but doesn't discard other selection blocks. |
+| `selectAll` | `Ctrl+A` | Selects all items in the list. |
+
+## Drag And Drop
+
+The following hotkeys need the `hotkeysCoreFeature` and `dragAndDropFeature` features added.
+
+DnD Keybindings aren't implemented yet (TODO).
+
+## Search
+
+The following hotkeys need the `hotkeysCoreFeature` and `searchFeature` features added.
+
+| Key | Default Keybinding | Description |
+| --- | --- | --- |
+| `openSearch` | `LetterOrNumber` | Opens the search input and focuses it. |
+| `closeSearch` | `Escape` | Closes the search input. |
+| `submitSearch` | `Enter` | Submits the search input, and focuses and selects the last selected search result item. |
+| `nextSearchItem` | `ArrowDown` | Focuses the next search result item. |
+| `previousSearchItem` | `ArrowUp` | Focuses the previous search result item. |
+
+## Renaming
+
+The following hotkeys need the `hotkeysCoreFeature` and `renamingFeature` features added.
+
+| Key | Default Keybinding | Description |
+| --- | --- | --- |
+| `renameItem` | `F2` | Starts renaming the focused item. |
+| `abortRename` | `Escape` | Close the rename input. |
+| `completeRenaming` | `Enter` | Close the rename input, and call the `config.onRename(item, newNameValue)` config property. |
+
+## Expand All
+
+The following hotkeys need the `hotkeysCoreFeature` and `expandAllFeature` features added.
+
+TODO not implemented yet.
