--- a/packages/docs/pages/getstarted.mdx
+++ b/packages/docs/pages/getstarted.mdx
@@ -8,7 +8,7 @@ template: page
 import { Alert } from "@mantine/core";
 import { DemoBox } from "../src/components/page/demo-box";
 
-<Alert title="A note on stability" color="red" variant="filled">
+<Alert title="A note on stability" color="red" variant="filled" sx={{ marginTop: "20px" }}>
 This project is currently in Alpha. Expect breaking changes in minor version bumps and incomplete changelogs.
 Bug reports and contributions are welcome!
 </Alert>
