docs on loading items

--- a/packages/docs/pages/features/1-tree.mdx
+++ b/packages/docs/pages/features/1-tree.mdx
@@ -28,4 +28,6 @@ import { DemoBox } from "../../src/components/page/demo-box";
 
 <DemoBox stories={["feature/tree"]} />
 
-TODO
+The tree core feature is always included by Headless Tree, and does not need to be explicitly imported and
+added to your tree config. It provides basic tree-related features, like expanding or collapsing items and moving
+the focus. Its state is composed of a list of expanded items, and the ID of the currently focused item.
