--- a/packages/docs/pages/getstarted.mdx
+++ b/packages/docs/pages/getstarted.mdx
@@ -27,6 +27,10 @@ or
 yarn add @headless-tree/core @headless-tree/react
 ```
 
+During Alpha, releases are published on an irregular basis, and changelogs may not properly reflect all changes.
+The current main branch is always published to NPM under the `snapshot` tag, so you can use
+`npm install @headless-tree/core@snapshot @headless-tree/react@snapshot` to get the latest snapshot deployment.
+
 # Quick Start
 
 The React Bindings of Headless Tree provide a hook `useTree` that creates a tree instance, which you can use
