attempt at new api docs

--- a/packages/docs/pages/features/1-tree.mdx
+++ b/packages/docs/pages/features/1-tree.mdx
@@ -15,13 +15,14 @@ metalinks:
     href: /api/types/_headless_tree_core.TreeFeatureDef.html
 storybook: feature/tree
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/types.ts
-  typedoc: /api/types/_headless_tree_core.TreeFeatureDef.html
-  config: TreeFeatureConfig.md
-  state: TreeFeatureState.md
-  treeInstance: TreeFeatureTreeInstance.md
-  itemInstance: TreeFeatureItemInstance.md
-  hotkeys: TreeFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
