--- a/packages/docs/pages/features/3-async-dataloader.mdx
+++ b/packages/docs/pages/features/3-async-dataloader.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/async-data-loader
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/async-data-loader/types.ts
-  typedoc: /api/types/_headless_tree_core.AsyncDataLoaderFeatureDef.html
-  config: AsyncDataLoaderFeatureConfig.md
-  state: AsyncDataLoaderFeatureState.md
-  treeInstance: AsyncDataLoaderFeatureTreeInstance.md
-  itemInstance: AsyncDataLoaderFeatureItemInstance.md
-  hotkeys: AsyncDataLoaderFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
