--- a/packages/docs/pages/features/7-search.mdx
+++ b/packages/docs/pages/features/7-search.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/search
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/search/types.ts
-  typedoc: /api/types/_headless_tree_core.SearchFeatureDef.html
-  config: SearchFeatureConfig.md
-  state: SearchFeatureState.md
-  treeInstance: SearchFeatureTreeInstance.md
-  itemInstance: SearchFeatureItemInstance.md
-  hotkeys: SearchFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
