--- a/packages/docs/pages/features/99-main.mdx
+++ b/packages/docs/pages/features/99-main.mdx
@@ -15,13 +15,14 @@ metalinks:
     href: /api/types/_headless_tree_core.MainFeatureDef.html
 storybook: feature/main
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/main/types.ts
-  typedoc: /api/types/_headless_tree_core.MainFeatureDef.html
-  config: MainFeatureConfig.md
-  state: MainFeatureState.md
-  treeInstance: MainFeatureTreeInstance.md
-  itemInstance: MainFeatureItemInstance.md
-  hotkeys: MainFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
