--- a/packages/docs/pages/features/2-sync-dataloader.mdx
+++ b/packages/docs/pages/features/2-sync-dataloader.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/sync-data-loader
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/sync-data-loader/types.ts
-  typedoc: /api/types/_headless_tree_core.SyncDataLoaderFeatureDef.html
-  config: SyncDataLoaderFeatureConfig.md
-  state: SyncDataLoaderFeatureState.md
-  treeInstance: SyncDataLoaderFeatureTreeInstance.md
-  itemInstance: SyncDataLoaderFeatureItemInstance.md
-  hotkeys: SyncDataLoaderFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
