--- a/packages/docs/pages/features/4-selection.mdx
+++ b/packages/docs/pages/features/4-selection.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/selection
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/selection/types.ts
-  typedoc: /api/types/_headless_tree_core.SelectionFeatureDef.html
-  config: SelectionFeatureConfig.md
-  state: SelectionFeatureState.md
-  treeInstance: SelectionFeatureTreeInstance.md
-  itemInstance: SelectionFeatureItemInstance.md
-  hotkeys: SelectionFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
