--- a/packages/docs/pages/features/5-dnd.mdx
+++ b/packages/docs/pages/features/5-dnd.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/dnd
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/drag-and-drop/types.ts
-  typedoc: /api/types/_headless_tree_core.DragAndDropFeatureDef.html
-  config: DragAndDropFeatureConfig.md
-  state: DragAndDropFeatureState.md
-  treeInstance: DragAndDropFeatureTreeInstance.md
-  itemInstance: DragAndDropFeatureItemInstance.md
-  hotkeys: DragAndDropFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
