--- a/packages/docs/pages/features/6-hotkeys.mdx
+++ b/packages/docs/pages/features/6-hotkeys.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/hotkeys
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/hotkeys-core/types.ts
-  typedoc: /api/types/_headless_tree_core.HotkeysCoreFeatureDef.html
-  config: HotkeysCoreFeatureConfig.md
-  state: HotkeysCoreFeatureState.md
-  treeInstance: HotkeysCoreFeatureTreeInstance.md
-  itemInstance: HotkeysCoreFeatureItemInstance.md
-  hotkeys: HotkeysCoreFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
