--- a/packages/docs/pages/features/8-renaming.mdx
+++ b/packages/docs/pages/features/8-renaming.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/renaming
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/renaming/types.ts
-  typedoc: /api/types/_headless_tree_core.RenamingFeatureDef.html
-  config: RenamingFeatureConfig.md
-  state: RenamingFeatureState.md
-  treeInstance: RenamingFeatureTreeInstance.md
-  itemInstance: RenamingFeatureItemInstance.md
-  hotkeys: RenamingFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
