--- a/packages/docs/pages/features/9-expandall.mdx
+++ b/packages/docs/pages/features/9-expandall.mdx
@@ -18,13 +18,14 @@ metalinks:
     language: typescript
 storybook: feature/expand-all
 api:
-  typesSource: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/expand-all/types.ts
-  typedoc: /api/types/_headless_tree_core.ExpandAllFeatureDef.html
-  config: ExpandAllFeatureConfig.md
-  state: ExpandAllFeatureState.md
-  treeInstance: ExpandAllFeatureTreeInstance.md
-  itemInstance: ExpandAllFeatureItemInstance.md
-  hotkeys: ExpandAllFeatureHotkeys.md
+ - name: Tree State
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Configuration
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Tree Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+ - name: Item Instance
+   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
 ---
 
 import { DemoBox } from "../../src/components/page/demo-box";
