docs header component

--- a/packages/docs-new/docs/features/1-tree.mdx
+++ b/packages/docs-new/docs/features/1-tree.mdx
@@ -1,6 +1,7 @@
 ---
 slug: "/features/tree"
 title: "Tree Core"
+hide_title: true
 subtitle: "Tree Core Functionality"
 category: feature
 metalinks:
@@ -26,6 +27,16 @@ api:
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
+import { DocsPageHeader } from "../../src/components/docs-page/docs-page-header";
+
+<DocsPageHeader
+    title="Tree Core"
+    subtitle="Tree Core Functionality"
+    sourceLink="https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/feature.ts"
+    typesLink="https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/types.ts"
+    typeDocLink="/api/types/_headless_tree_core.TreeFeatureDef.html"
+    importText="import { TreeFeature } from 'headless-tree'; TODOTODOTODO"
+/>
 
 <DemoBox tags={["feature/tree"]} />
 
