--- a/packages/docs-new/docs/features/1-tree.mdx
+++ b/packages/docs-new/docs/features/1-tree.mdx
@@ -35,7 +35,7 @@ import { DocsPageHeader } from "../../src/components/docs-page/docs-page-header"
     sourceLink="https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/feature.ts"
     typesLink="https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/types.ts"
     typeDocLink="/api/types/_headless_tree_core.TreeFeatureDef.html"
-    importText="import { TreeFeature } from 'headless-tree'; TODOTODOTODO"
+    importText="import { treeFeature } from '@headless-tree/core';"
 />
 
 <DemoBox tags={["feature/tree"]} />
