working feature state header

--- a/packages/docs-new/docs/features/1-tree.mdx
+++ b/packages/docs-new/docs/features/1-tree.mdx
@@ -27,15 +27,12 @@ api:
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
-import { DocsPageHeader } from "../../src/components/docs-page/docs-page-header";
+import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-header";
 
-<DocsPageHeader
+<FeaturePageHeader
     title="Tree Core"
     subtitle="Tree Core Functionality"
-    sourceLink="https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/feature.ts"
-    typesLink="https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/types.ts"
-    typeDocLink="/api/types/_headless_tree_core.TreeFeatureDef.html"
-    importText="import { treeFeature } from '@headless-tree/core';"
+    feature="tree"
 />
 
 <DemoBox tags={["feature/tree"]} />
