--- a/packages/docs-new/docs/getstarted.mdx
+++ b/packages/docs-new/docs/getstarted.mdx
@@ -3,14 +3,15 @@ slug: "/getstarted"
 title: "Get Started"
 category: intro
 template: page
+sidebar_position: 0
 ---
 
 import { Alert } from "@mantine/core";
 import { DemoBox } from "../src/components/demo/demo-box";
 
 <Alert title="A note on stability" color="red" variant="filled" sx={{ marginTop: "20px" }}>
-This project is currently in Alpha. Expect breaking changes in minor version bumps and incomplete changelogs.
-Bug reports and contributions are welcome!
+    This project is currently in Alpha. Expect breaking changes in minor version bumps and incomplete changelogs.
+    Bug reports and contributions are welcome!
 </Alert>
 
 # Installation
