finalize feature docs headers

--- a/packages/docs-new/docs/features/1-tree.mdx
+++ b/packages/docs-new/docs/features/1-tree.mdx
@@ -1,29 +1,8 @@
 ---
 slug: "/features/tree"
 title: "Tree Core"
-hide_title: true
 subtitle: "Tree Core Functionality"
-category: feature
-metalinks:
-  - name: Source
-    label: View Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/feature.ts
-  - name: Types
-    label: View Types Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/tree/types.ts
-  - name: TypeDoc
-    label: View TypeDoc
-    href: /api/types/_headless_tree_core.TreeFeatureDef.html
-storybook: feature/tree
-api:
- - name: Tree State
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Configuration
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Item Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+hide_title: true
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
@@ -33,6 +12,7 @@ import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-h
     title="Tree Core"
     subtitle="Tree Core Functionality"
     feature="tree"
+    isCore={true}
 />
 
 <DemoBox tags={["feature/tree"]} />
