--- a/packages/docs-new/docs/features/8-renaming.mdx
+++ b/packages/docs-new/docs/features/8-renaming.mdx
@@ -2,33 +2,17 @@
 slug: "/features/renaming"
 title: "Renaming"
 subtitle: "Rename items in the tree"
-category: feature
-metalinks:
-  - name: Source
-    label: View Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/renaming/feature.ts
-  - name: Types
-    label: View Types Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/renaming/types.ts
-  - name: TypeDoc
-    label: View TypeDoc
-    href: /api/types/_headless_tree_core.RenamingFeatureDef.html
-  - name: Import
-    code: "import { renamingFeature } from \"@headless-tree/core\";"
-    language: typescript
-storybook: feature/renaming
-api:
- - name: Tree State
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Configuration
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Item Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+hide_title: true
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
+import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-header";
+
+<FeaturePageHeader
+    title="Renaming"
+    subtitle="Rename items in the tree"
+    feature="renaming"
+/>
 
 <DemoBox tags={["feature/renaming"]} />
 
