--- a/packages/docs-new/docs/features/3-async-dataloader.mdx
+++ b/packages/docs-new/docs/features/3-async-dataloader.mdx
@@ -2,33 +2,17 @@
 slug: "/features/async-dataloader"
 title: "Async Data Loader"
 subtitle: "Data interface for asynchronous data sources"
-category: feature
-metalinks:
-  - name: Source
-    label: View Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/async-data-loader/feature.ts
-  - name: Types
-    label: View Types Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/async-data-loader/types.ts
-  - name: TypeDoc
-    label: View TypeDoc
-    href: /api/types/_headless_tree_core.AsyncDataLoaderFeatureDef.html
-  - name: Import
-    code: "import { asyncDataLoaderFeature } from \"@headless-tree/core\";"
-    language: typescript
-storybook: feature/async-data-loader
-api:
- - name: Tree State
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Configuration
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Item Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+hide_title: true
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
+import {FeaturePageHeader} from "../../src/components/docs-page/feature-page-header";
+
+<FeaturePageHeader
+    title="Async Data Loader"
+    subtitle="Data interface for asynchronous data sources"
+    feature="async-data-loader"
+/>
 
 <DemoBox tags={["feature/async-data-loader"]} />
 
