--- a/packages/docs-new/docs/features/5-dnd.mdx
+++ b/packages/docs-new/docs/features/5-dnd.mdx
@@ -2,34 +2,17 @@
 slug: "/features/dnd"
 title: "Drag and Drop"
 subtitle: "Drag-and-drop Capabilities for tree items and external drag objects"
-category: feature
-metalinks:
-  - name: Source
-    label: View Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/drag-and-drop/feature.ts
-  - name: Types
-    label: View Types Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/drag-and-drop/types.ts
-  - name: TypeDoc
-    label: View TypeDoc
-    href: /api/types/_headless_tree_core.DragAndDropFeatureDef.html
-  - name: Import
-    code: "import { dragAndDropFeature } from \"@headless-tree/core\";"
-    language: typescript
-storybook: feature/dnd
-api:
- - name: Tree State
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Configuration
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Item Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+hide_title: true
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
+import {FeaturePageHeader} from "../../src/components/docs-page/feature-page-header";
 
+<FeaturePageHeader
+    title="Drag and Drop"
+    subtitle="Drag-and-drop Capabilities for tree items and external drag objects"
+    feature="drag-and-drop"
+/>
 <DemoBox tags={["feature/dnd"]} />
 
 TODO
