--- a/packages/docs-new/docs/features/6-hotkeys.mdx
+++ b/packages/docs-new/docs/features/6-hotkeys.mdx
@@ -2,33 +2,17 @@
 slug: "/features/hotkeys"
 title: "Hotkeys"
 subtitle: "Support for custom and predefined hotkeys to navigate and interact with the tree"
-category: feature
-metalinks:
-  - name: Source
-    label: View Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/hotkeys-core/feature.ts
-  - name: Types
-    label: View Types Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/hotkeys-core/types.ts
-  - name: TypeDoc
-    label: View TypeDoc
-    href: /api/types/_headless_tree_core.HotkeysCoreFeatureDef.html
-  - name: Import
-    code: "import { hotkeysCoreFeature } from \"@headless-tree/core\";"
-    language: typescript
-storybook: feature/hotkeys
-api:
- - name: Tree State
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Configuration
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Item Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+hide_title: true
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
+import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-header";
+
+<FeaturePageHeader
+    title="Hotkeys"
+    subtitle="Support for custom and predefined hotkeys to navigate and interact with the tree"
+    feature="hotkeys"
+/>
 
 <DemoBox tags={["feature/hotkeys"]} />
 
