--- a/packages/docs-new/docs/features/7-search.mdx
+++ b/packages/docs-new/docs/features/7-search.mdx
@@ -2,33 +2,17 @@
 slug: "/features/search"
 title: "Tree Search"
 subtitle: "Searching for items in the tree by typing in a search query"
-category: feature
-metalinks:
-  - name: Source
-    label: View Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/search/feature.ts
-  - name: Types
-    label: View Types Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/search/types.ts
-  - name: TypeDoc
-    label: View TypeDoc
-    href: /api/types/_headless_tree_core.SearchFeatureDef.html
-  - name: Import
-    code: "import { searchFeature } from \"@headless-tree/core\";"
-    language: typescript
-storybook: feature/search
-api:
- - name: Tree State
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Configuration
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Item Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+hide_title: true
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
+import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-header";
+
+<FeaturePageHeader
+    title="Tree Search"
+    subtitle="Searching for items in the tree by typing in a search query"
+    feature="search"
+/>
 
 <DemoBox tags={["feature/search"]} />
 
