--- a/packages/docs-new/docs/features/99-main.mdx
+++ b/packages/docs-new/docs/features/99-main.mdx
@@ -2,30 +2,19 @@
 slug: "/features/main"
 title: "Main Feature"
 subtitle: "Core Features related to Headless-Tree"
-category: feature
-metalinks:
-  - name: Source
-    label: View Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/main/types.ts
-  - name: Types
-    label: View Types Source
-    href: https://github.com/lukasbach/headless-tree/blob/main/packages/core/src/features/main/types.ts
-  - name: TypeDoc
-    label: View TypeDoc
-    href: /api/types/_headless_tree_core.MainFeatureDef.html
-storybook: feature/main
-api:
- - name: Tree State
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Configuration
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Tree Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
- - name: Item Instance
-   docs: /api/types/_headless_tree_core.TreeFeatureDef.html
+hide_title: true
 ---
 
 import { DemoBox } from "../../src/components/demo/demo-box";
+import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-header";
+
+<FeaturePageHeader
+    title="Main Feature"
+    subtitle="Core Features related to Headless-Tree"
+    feature="main"
+    isCore={true}
+/>
+
 
 <DemoBox tags={["feature/main"]} />
 
