--- a/packages/docs-new/docs/features/2-sync-dataloader.mdx
+++ b/packages/docs-new/docs/features/2-sync-dataloader.mdx
@@ -17,12 +17,12 @@ import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-h
 <DemoBox tags={["feature/sync-data-loader"]} />
 
 When using Headless Tree, you need to provide an interface to read your data. The most straight-forward way
-to do this is using the Sync Data Loader Feature. Alternatively, you can use the [Async Data Loader Feature](/features/async-data-loader)
+to do this is using the Sync Data Loader Feature. Alternatively, you can use the [Async Data Loader Feature](/features/async-dataloader)
 if you are dealing with asynchronous data sources. In both cases, you need to include the respective feature
 explicitly.
 
 When using the Sync Data Loader Feature, you need to provide a `dataLoader` property in your tree config
-which implements the [`SyncTreeDataLoader`](/api/types/_headless_tree_core.SyncTreeDataLoader.html) interface.
+which implements the [`SyncTreeDataLoader`](/api/core#SyncTreeDataLoader) interface.
 
 ```ts
 const tree = useTree<ItemPayload>({
@@ -42,4 +42,4 @@ render. Therefore, you should make sure that these functions are fast and do not
 
 Asynchronous data providers on the other hand provide caching out of the box, and only call those functions once
 per item until their data are explicitly invalidated. If your data source provides an synchronous, yet expensive
-interface, you can still use the [Async Data Loader](/features/async-data-loader) instead.
+interface, you can still use the [Async Data Loader](/features/async-dataloader) instead.
