--- a/packages/docs/docs/dnd/2-foreign-dnd.mdx
+++ b/packages/docs/docs/dnd/2-foreign-dnd.mdx
@@ -5,3 +5,9 @@ category: draganddrop
 ---
 
 # Dragging in or out of tree
+
+## Dragging tree items out of tree
+
+## Dragging foreign objects inside of tree
+
+## Interactions between multiple instances of Headless Tree
