--- a/packages/docs/docs/dnd/1-overview.mdx
+++ b/packages/docs/docs/dnd/1-overview.mdx
@@ -4,6 +4,8 @@ title: "Overview"
 category: draganddrop
 ---
 
+import { DemoBox } from "../../src/components/demo/demo-box";
+
 # Overview
 
 ```jsx typescript
