--- a/packages/docs/docs/dnd/4-customizability.mdx
+++ b/packages/docs/docs/dnd/4-customizability.mdx
@@ -4,6 +4,8 @@ title: "Customizability"
 category: draganddrop
 ---
 
+import { DemoBox } from "../../src/components/demo/demo-box";
+
 # Customizability
 
 ## No reordering
