--- a/packages/docs/docs/dnd/1-overview.mdx
+++ b/packages/docs/docs/dnd/1-overview.mdx
@@ -19,7 +19,7 @@ import {
 
 const tree = useTree<Item>({
   indent: 20,
-  canDropInbetween: true,
+  canReorder: true,
   onDrop: createOnDropHandler((item, newChildren) => {
     // set newChildren to item
   }),
@@ -59,7 +59,7 @@ const tree = useTree<Item>({
 ```jsx typescript
 const tree = useTree<Item>({
   indent: 20,
-  canDropInbetween: true,
+  canReorder: true,
   onDrop: createOnDropHandler((item, newChildren) => {}),
   features: [
     asyncDataLoaderFeature,
